# DuckDb-ETL

./: .env  README.md  app.py  duckdb.db  pipeline_00.py  pipeline_02.py  pyproject.toml
